[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[parsing, infrastructure]>=1.3.4"]

[project.optional-dependencies]
plugins = [
  "nomad-measurements",
  "nomad-material-processing",
  "nomad-analysis @ git+https://github.com/FAIRmat-NFDI/nomad-analysis.git@c5452a6c43545d942f8898cc8f8f3eec7e440a61",
  "bayesian-optimization-hpt @ git+https://github.com/ka-sarthak/bayesian-optimization-plugin.git@b4967b0df8bd7b955dafe5b4297866bd034159ee",
  "nomad-ikz-plugin @git+https://github.com/IKZ-Berlin/nomad-ikz-plugin.git@a68ee7fe9f4ab1921a2d4ef8e3915ab8def1a4e4",
]
jupyter = []
dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.4"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "disallow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
