[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]>=1.3.16dev", 
  "setuptools", 
  "elasticsearch-dsl>=7.0",
  "plotly<6.0.0",
  "pydantic<2.11",
]


[project.urls]
repository = "https://github.com/FAIRmat-NFDI/nomad-distro-template"

[project.optional-dependencies]
plugins = [
  "nomad-auto-xrd",
  "nomad-dtu-nanolab-plugin",
]
jupyter = [
  "nomad-auto-xrd[analytics]",
]
dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.16dev"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "allow"

[tool.uv.sources]
nomad-auto-xrd = { git = "https://github.com/FAIRmat-NFDI/nomad-auto-xrd.git", rev = "v0.1.0" }
nomad-dtu-nanolab-plugin = { git = "https://github.com/DTU-Nanolab-materials-discovery/nomad-dtu-nanolab-plugin.git", rev = "v0.3.37" }

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
